// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rc-footer render Footer with columnLayout and backgroundColor 1`] = `
LoadedCheerio {
  "0": <footer
    class="rc-footer rc-footer-dark"
    style="color: red; background-color: transparent;"
  >
    <section
      class="rc-footer-container"
    >
      <section
        class="rc-footer-columns"
        style="justify-content: space-between;"
      >
        <div
          class="rc-footer-column"
        >
          <h2>
            title
          </h2>
        </div>
        <div
          class="rc-footer-column"
        >
          <h2>
            title
          </h2>
        </div>
      </section>
    </section>
  </footer>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`rc-footer render empty Footer 1`] = `
LoadedCheerio {
  "0": <footer
    class="rc-footer rc-footer-dark"
  >
    <section
      class="rc-footer-container"
    />
  </footer>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`rc-footer render light theme Footer 1`] = `
LoadedCheerio {
  "0": <footer
    class="rc-footer rc-footer-light"
    style="color: red;"
  >
    <section
      class="rc-footer-container"
    >
      <section
        class="rc-footer-columns"
      >
        <div
          class="rc-footer-column"
        >
          <h2>
            title
          </h2>
        </div>
        <div
          class="rc-footer-column"
        >
          <h2>
            title
          </h2>
        </div>
      </section>
    </section>
  </footer>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
